corrections to mistakes on mobile

--- a/src/styles/BenefitsPage.css
+++ b/src/styles/BenefitsPage.css
@@ -17,6 +17,7 @@
 }
 .Benefits__article p
 {
+  font-family: 'Caveat', cursive;
   background-color: white;
   position: relative;
   margin-top: 5%;
