--- a/src/styles/Eco&Ext_Oil.css
+++ b/src/styles/Eco&Ext_Oil.css
@@ -33,7 +33,7 @@ float: left;
  .oil-image
     {
         height: 200px;
-       
+        box-shadow: 0px 0px 10px 2px rgb(43, 43, 43);
     }
     
     .content
@@ -76,13 +76,13 @@ float: left;
     }
     .OilIntroduce_text
     {
-        
+        font-family: 'Caveat', cursive;
         background-color: white;
         position: relative;
         margin-top: 5%;
         margin-bottom: 5%;
         font-size: 18px;
-        width: 80%;
+        width: 90%;
        left: 50%;
        transform: translateX(-50%);
         text-align: justify;
