--- a/src/styles/SideDrawer.css
+++ b/src/styles/SideDrawer.css
@@ -11,11 +11,11 @@
     max-width: 400px;
     z-index: 5;
     transform: translateX(-100%);
-    transition: transform 0.6s ease-out;
+    transition: transform 0.8s ease-out;
 }
 .side-drawer.open{
     
-    
+    transition: transform 0.5s ease-out;
     transform: translateX(0);
     box-shadow: 1px 0px 7px rgb(63, 63, 63);
 }
